2011-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Change message of "timeout waiting for REP" to
	  "Some estimate timeout on %s, using server estimate if possible".

2011-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-scripts.7.xml: Document script output property.

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: rework regex generation from globs

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_word(): change the way regex
	  begin and end are calculated/copied

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: better handling of "separator only"
	  globs in match_word()

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: move glob/disk backslash substitution
	  out of match_word()

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: factorize regex construction from
	  expression

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: factorize character escaping in
	  make_exact_*_expression()

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: factorize regex matching
	* common-src/match.h: make match and match_no_newline into
	  macros calling do_match

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: factorize regex compile

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_host(): use g_ascii_strdown() to
	  convert to lowercase

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: fix '*' and '?' expansion in
	  match_word()

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: define a macro to recognize regex
	  metacharacters

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>