@@ -1,3 +1,7 @@
+2011-01-11  Francis Galiegue <fgaliegue@gmail.com>
+	* common-src/match.c: match.c: rename full_regex_from_expression() to
+	  full_amglob_from_expression()
+
 2011-01-11  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/planner.c: Change message of "timeout waiting for REP" to
 	  "Some estimate timeout on %s, using server estimate if possible".
